fixed padding issue on mobile

--- a/src/components/cardList/cardList.style.css
+++ b/src/components/cardList/cardList.style.css
@@ -5,3 +5,10 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+
+
+@media screen and (max-width: 600px){
+    .card-list-container{
+        padding: 2rem 0;
+    }
+}
